--- a/src/Components/Platform/platform.scss
+++ b/src/Components/Platform/platform.scss
@@ -4,16 +4,18 @@
 
 .platform-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 30px;
   margin-top: 50px;
+  justify-content: center;
 }
 .platform-grid img {
   margin: auto;
   cursor: pointer;
+  -o-object-fit: cover;
+  object-fit: cover;
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
-  -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
 }
 .platform-grid img:hover {
